<resources>
    <string name="app_name">Realm Example</string>
    <string name="action_settings">Settings</string>
    <string name="title_rx">Rx</string>
    <string name="title_list">Realm List</string>
    <string name="title_test">Test func</string>
    <string name="add_test_object_id_0">Add Test Object (id=0)</string>
    <string name="get_test_object_id_0">Get Test Object (id=0)</string>
    <string name="get_test_object_observable_id_0">Get Test Object Observable (id=0)</string>
    <string name="incorrect_async_access">Incorrect async access</string>
    <string name="clear_realm">Clear Realm</string>
    <string name="async_exception_logcat">Async Exception (LogCat)</string>

</resources>
